# Project_with_stripe

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
stripe_project/: .env_example
stripe_project/market/: admin.py  models.py  serializers.py  urls.py  views.py
stripe_project/market/templates/: cancel.html
stripe_project/market/templates/market/: cart.html  item.html
stripe_project/market/templates/market/includes/: item_detail.html
stripe_project/stripe_project/: settings.py  urls.py
